# kserve-vllm-mini

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.harness  FIXES.md  GA_HARDENING.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  analyze.py  bench.sh  cache-probe.sh  cost-calculator.sh  cost.yaml  cost_calculator.py  cost_estimator.py  deploy.sh  example-config.yaml  grid-sweep.sh  isvc.yaml  kvmini  load-test.sh  planner.py  pyproject.toml  reference-matrix.yaml  report_generator.py  requirements-dev.txt  requirements.txt  slo.json
.github/: CODEOWNERS  REPOSITORY_SETUP.md  dependabot.yml  discussions-setup.md  projects-board-setup.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  profile_request.yml
.github/workflows/: auto-format-python.yml  auto-format.yml  canary-compare.yml  ci.yml  docs-deploy.yml  docs-pages.yml  drift-guard.yml  lint-test.yml  policy-ci.yml  reference-matrix.yml  repro-smoke.yml  slo-gate.yml
charts/kserve-vllm-mini/: .helmignore  Chart.yaml  README.md  example-values.yaml  values.schema.json  values.yaml
charts/kvmini/: Chart.yaml  README.md  values.yaml
dashboards/: cold-start-impact.json  knative-kserve-golden.json  kserve-llm-latency.json  kserve-llm-utilization.json
docs/: API.md  BOM.md  DEVELOPER_SETUP.md  ENERGY_METHOD.md  FEATURES.md  LINTING.md  MIG.md  SECURITY.md  TROUBLESHOOTING.md
docs/cloud/: aws.md  azure.md  gcp.md
docs/tensorrt-llm/: BUILD_BENCHMARKS.md  DEPLOYMENT.md
docs/website/: README.md  cost.yaml  docusaurus.config.js  package-lock.json  package.json  reference-matrix.yaml  sidebars.js  (+1 more)
energy/: __init__.py  collector.py
kvmini/: __init__.py  __main__.py  cli.py
policies/: README.md
quality/: __init__.py  evaluator.py
runners/: README.md  ab-compare.sh  test-example.sh
scripts/: compare_backends.py  fairness_dual_tenant.py  fix-shellcheck.sh  loadtest.py  openai_parity_probe.py  preflight-checks.sh  reference_runner.py  triton_token_utils.py  trtllm_build_vs_perf.py  validate_config.py
sweeps/: autoscale-sweep.sh  mig-sweep.sh  quantization_sweep.py  quantization_sweep.yaml
test_data/: meta.json
tests/: policy_test.sh  test_energy.py  test_triton_tokens.py  test_validate_autodetect.py  test_validate_config.py
tools/: bundle_run.sh  canary_compare.py  chaos_harness.sh  collect_cluster_facts.sh  gate.py  net_storage_probe.py  sbom.sh  sign.sh
(+70 files in other folders)
